project/force-app/main/default/objects/Opportunity/fields/Account_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Code__c</fullName>
    <formula>Account.Tax_Code__c</formula>
    <label>Customer Tax Code</label>
    <type>Text</type>
</CustomField>