project/force-app/main/default/objects/Opportunity/fields/Active_BCC_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_BCC_Count__c</fullName>
    <description>Number of Active Submission Reports (BCC) related to this Opportunity</description>
    <label>Active BCC Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>