project/force-app/main/default/objects/Opportunity/fields/Actual_Amount_Support_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_Support_Outdoor_Price__c</fullName>
    <label>Actual Amount Support Outdoor Price</label>
    <description>- Read only 
-  Help Text: Tổng Tiền Hỗ Trợ Ngoài Trời Thực Tế = Đơn Giá Thuê Ngoài Trời * Số Tháng Hỗ Trợ Ngoài Trời Thực Tế * DT Ngoài Trời</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>