project/force-app/main/default/objects/Opportunity/fields/Actual_Amount_Support_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_Support_Service_Fee__c</fullName>
    <description>- Read only 
-  Help Text: Tổng Tiền Hỗ Trợ PDV Thực Tế = Đơn Giá PDV * Số Tháng Hỗ Trợ PDV Thực Tế * Tổng DT GFA</description>
    <label>Actual Amount Support Service Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>