project/force-app/main/default/objects/Opportunity/fields/Actual_Capex__c.field-meta.xml
<CustomField>
    <fullName>Actual_Capex__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Chỉ hiện nếu chọn &quot;Có Hỗ Trợ&quot;
Help Text: VNĐ</description>
    <label>Actual Capex</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>