project/force-app/main/default/objects/Opportunity/fields/Actual_Number_Support_Month_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_Support_Month_Outdoor__c</fullName>
    <description>- Read only  
-  Help Text: Số Tháng Hỗ Trợ Ngoài Trời Thực Tế = (Ngày Kết Thúc Hỗ Trợ PDV Thực Tế - Ngày Bắt Đầu Hỗ Trợ PDV Thực Tế)/30</description>
    <label>Actual Number Support Month Outdoor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>