project/force-app/main/default/objects/Opportunity/fields/Actual_Number_Support_Month_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_Support_Month_Rent_Price__c</fullName>
    <label>Actual Number Support Month Rent Price</label>
    <description>- Read only  
- Help Text: Số Tháng Hỗ Trợ Tiền Thuê Thực Tế = (Ngày Kết Thúc Hỗ Trợ Tiền Thuê Thực Tế - Ngày Bắt Đầu Hỗ Trợ Tiền Thuê Thực Tế)/30</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>