project/force-app/main/default/objects/Opportunity/fields/Actual_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Support_Type__c</fullName>
    <description>Chỉ hiện nếu chọn &quot;Có Hỗ Trợ&quot;</description>
    <label>Actual Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Rent Price;</fullName>
            </value>
            <value>
                <fullName>Free Service Fee;</fullName>
            </value>
            <value>
                <fullName>Free Rent Price &amp; Service Fee;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>