project/force-app/main/default/objects/Opportunity/fields/Actual_Voucher_Support_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Voucher_Support_Amount__c</fullName>
    <label>Actual Voucher Support Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>