project/force-app/main/default/objects/Opportunity/fields/Air_Conditioning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Fee__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Chỉ hiện nếu chọn &quot;Có Phụ Phí&quot;</description>
    <label>Air Conditioning Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>