project/force-app/main/default/objects/Opportunity/fields/Air_Conditioning_Fee_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Fee_By_Char__c</fullName>
    <label>Air Conditioning Fee (By Char)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>