project/force-app/main/default/objects/Opportunity/fields/Air_Conditioning_Service_Fee_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_Service_Fee_By_Number__c</fullName>
    <label>Air Conditioning Service Fee (By Number)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>