project/force-app/main/default/objects/Opportunity/fields/BCC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>BCC_Approval_Date__c</fullName>
    <label>BCC Approval Date</label>
    <description>Read Only tự động cập nhật từ Báo Cáo Chốt khi được duyệt</description>
    <type>Date</type>
</CustomField>