project/force-app/main/default/objects/Opportunity/fields/Bid_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Appointment_Date__c</fullName>
    <label>Bid Appointment Date</label>
    <type>Date</type>
</CustomField>