project/force-app/main/default/objects/Opportunity/fields/Brand_Sign_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Sign_Name__c</fullName>
    <label>Brand Sign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>