project/force-app/main/default/objects/Opportunity/fields/Brands_To_Promote_And_Organize_Events__c.field-meta.xml
<CustomField>
    <fullName>Brands_To_Promote_And_Organize_Events__c</fullName>
    <label>Brands To Promote And Organize Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>