project/force-app/main/default/objects/Opportunity/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Sales Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>