project/force-app/main/default/objects/Opportunity/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Lookup</type>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipName>Business_Entitys</relationshipName>
</CustomField>