project/force-app/main/default/objects/Opportunity/fields/Capex_Support_Floor_4th__c.field-meta.xml
<CustomField>
    <fullName>Capex_Support_Floor_4th__c</fullName>
    <label>Capex Support Floor 4th</label>
    <description>Chỉ hiện nếu chọn &quot;Có Hỗ Trợ&quot;</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>