project/force-app/main/default/objects/Opportunity/fields/Construction_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Completion_Date__c</fullName>
    <label>Construction Completion Date</label>
    <type>Date</type>
</CustomField>