project/force-app/main/default/objects/Opportunity/fields/Construction_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Construction_Deadline__c</fullName>
    <label>Construction Deadline</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>