project/force-app/main/default/objects/Opportunity/fields/Construction_Deposit_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Construction_Deposit_By_Number__c</fullName>
    <label>Construction Deposit (By Number)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>