project/force-app/main/default/objects/Opportunity/fields/Construction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee__c</fullName>
    <description>Read Only
Ẩn trên layout
Help Text: Dữ liệu được đồng bộ từ Báo Cáo Chốt</description>
    <label>Construction Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>