project/force-app/main/default/objects/Opportunity/fields/Construction_Fee_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee_By_Char__c</fullName>
    <label>Construction Fee (By Char)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>