project/force-app/main/default/objects/Opportunity/fields/Construction_Fee_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Construction_Fee_By_Number__c</fullName>
    <description>Dùng Automation lấy từ BCC</description>
    <label>Construction Fee (By Number)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>