project/force-app/main/default/objects/Opportunity/fields/Contract_Expired_Date_If_Not_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired_Date_If_Not_Confirmed__c</fullName>
    <label>Contract Expired Date If Not Confirmed</label>
    <type>Date</type>
</CustomField>