project/force-app/main/default/objects/Opportunity/fields/Contract_Signed_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Month_Number__c</fullName>
    <label>Contract Signed Month Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>