project/force-app/main/default/objects/Opportunity/fields/COP_Index__c.field-meta.xml
<CustomField>
    <fullName>COP_Index__c</fullName>
    <label>COP Index</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>