project/force-app/main/default/objects/Opportunity/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Current_Locations</relationshipName>
</CustomField>