project/force-app/main/default/objects/Opportunity/fields/Customer_Close_Phase_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Close_Phase_Transition_Date__c</fullName>
    <label>Customer Close Phase Transition Date</label>
    <description>Không hiện lên layout</description>
    <type>Date</type>
</CustomField>