project/force-app/main/default/objects/Opportunity/fields/Customer_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest_Level__c</fullName>
    <label>Customer Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot;</fullName>
            </value>
            <value>
                <fullName>Warm;</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>