project/force-app/main/default/objects/Opportunity/fields/Customer_Pay_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pay_Price__c</fullName>
    <label>Customer Pay Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>