project/force-app/main/default/objects/Opportunity/fields/Customer_Pay_Price_Vs_Budget_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pay_Price_Vs_Budget_Price__c</fullName>
    <label>Customer Pay Price Vs. Budget Price</label>
    <type>Text</type>
    <formula>"TBD"</formula>
</CustomField>