project/force-app/main/default/objects/Opportunity/fields/Cutomer_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cutomer_Service_Fee__c</fullName>
    <label>Customer Service Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>