project/force-app/main/default/objects/Opportunity/fields/Cutomer_Service_Fee_Vs_Budget_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cutomer_Service_Fee_Vs_Budget_Fee__c</fullName>
    <label>Customer Service Fee Vs. Budget Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>