project/force-app/main/default/objects/Opportunity/fields/Days_For_Air_Conditioning_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Days_For_Air_Conditioning_Fee_Adjustment__c</fullName>
    <label>Days For Air Conditioning Fee Adjustment</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>