project/force-app/main/default/objects/Opportunity/fields/Days_Providing_Promotional_Positions__c.field-meta.xml
<CustomField>
    <fullName>Days_Providing_Promotional_Positions__c</fullName>
    <label>Days Providing Promotional Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>