project/force-app/main/default/objects/Opportunity/fields/Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount__c</fullName>
    <label>Debit Amount</label>
    <description>- Read Only
- Help Text: Dữ liệu được đồng bộ từ Báo Cáo Chốt</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>