project/force-app/main/default/objects/Opportunity/fields/Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>Debit_Date__c</fullName>
    <label>Debit Date</label>
    <description>- Tự động cập nhật khi Phê duyệt BCC
- Cho phép người dùng sửa lại ngày cọc
- Help Text: Ngày Cọc = Ngày Duyệt BCC + 14 ngày</description>
    <inlineHelpText>Hệ thống tự động chọn ngày theo công thức &quot;Ngày Duyệt BCC&quot; + 14 ngày tiếp theo.</inlineHelpText>
    <type>Date</type>
</CustomField>