project/force-app/main/default/objects/Opportunity/fields/Debit_Phase_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Debit_Phase_Transition_Date__c</fullName>
    <description>Không hiện lên layout</description>
    <label>Debit Phase Transition Date</label>
    <type>Date</type>
</CustomField>