project/force-app/main/default/objects/Opportunity/fields/Deposit_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Transfer__c</fullName>
    <label>Deposit Transfer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>