project/force-app/main/default/objects/Opportunity/fields/Deposited__c.field-meta.xml
<CustomField>
    <fullName>Deposited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bắt buộc nhập khi chuyển sang giai đoạn Cọc</description>
    <label>Deposited</label>
    <type>Checkbox</type>
</CustomField>