project/force-app/main/default/objects/Opportunity/fields/Design_Construction_Plan_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Design_Construction_Plan_Deadline__c</fullName>
    <label>Design/Construction Plan Deadline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>