project/force-app/main/default/objects/Opportunity/fields/Discovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Status__c</fullName>
    <label>Discovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surveyed;</fullName>
            </value>
            <value>
                <fullName>Not Surveyed;</fullName>
            </value>
            <value>
                <fullName>Customers Not Surveyed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>