project/force-app/main/default/objects/Opportunity/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>VD: 
+ Tỷ giá USD sang VND: 24,821.00
+ Tỷ giá VND sang USD: 0.000040
Thêm Help Text mô tả</description>
    <label>Exchange Rate</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>