project/force-app/main/default/objects/Opportunity/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <description>- Nhập và chỉnh sửa bằng USD
- Bắt buộc nhập nếu Opp. Type = Giá Cố Định; Chia Sẻ Doanh Thu Cộng Giá Cố Định
- Dynamic layout tương ứng trường bắt buộc nhập
- Help Text: (USD/m2/Tháng)</description>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>