project/force-app/main/default/objects/Opportunity/fields/Floor_1st_Capex_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_1st_Capex_Price__c</fullName>
    <description>Nhập và chỉnh sửa bằng VNĐ
Chỉ hiện nếu chọn &quot;Có Hỗ Trợ&quot;
Help Text: (VNĐ/m2)</description>
    <label>Floor 1st Capex Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>