project/force-app/main/default/objects/Opportunity/fields/Floor_4th_Capex_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_4th_Capex_Price__c</fullName>
    <label>Floor 4th Capex Price</label>
    <description>Nhập và chỉnh sửa bằng USD
Chỉ hiện nếu chọn &quot;Có Hỗ Trợ&quot;
Help Text: (VNĐ/m2)</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>