project/force-app/main/default/objects/Opportunity/fields/Garbage_Collection_Assistance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Garbage_Collection_Assistance_Fee__c</fullName>
    <label>Garbage Collection Assistance Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>