project/force-app/main/default/objects/Opportunity/fields/Have_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Have_Additional_Charges__c</fullName>
    <label>Have Additional Charges</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>