project/force-app/main/default/objects/Opportunity/fields/Have_CAPEX__c.field-meta.xml
<CustomField>
    <fullName>Have_CAPEX__c</fullName>
    <label>Have Capex</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>