project/force-app/main/default/objects/Opportunity/fields/Have_Support__c.field-meta.xml
<CustomField>
    <fullName>Have_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Support</label>
    <type>Checkbox</type>
</CustomField>