project/force-app/main/default/objects/Opportunity/fields/Increase_by_Year__c.field-meta.xml
<CustomField>
    <fullName>Increase_by_Year__c</fullName>
    <description>Điền % tăng mỗi năm để tính toán khi tạo báo cáo chốt. Nếu không điền thì default là 0%</description>
    <label>% Increase by Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>