project/force-app/main/default/objects/Opportunity/fields/Installation_Completion_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completion_Duration_Days__c</fullName>
    <label>Installation/Completion Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>