project/force-app/main/default/objects/Opportunity/fields/Interest_Rate_On_Deposit_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_On_Deposit_By_Char__c</fullName>
    <label>Interest Rate On Deposit (By Char)</label>
    <type>Text</type>
    <length>40</length>
</CustomField>