project/force-app/main/default/objects/Opportunity/fields/Interest_Rate_On_Deposit_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_On_Deposit_By_Number__c</fullName>
    <label>Interest Rate On Deposit (By Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>