project/force-app/main/default/objects/Opportunity/fields/Is_Sync_Submission_Report__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Submission_Report__c</fullName>
    <label>Is Sync Submission Report</label>
    <description>- Read Only
- Tự động đánh dấu khi có BCC được đồng bộ giá lên Opp
- Tự động reset khi chuyển từ các Giai Đoạn: Chốt Khách, OTL, Cọc, Hợp Đồng, Đóng Thất Bại về Chào Khách, Khảo Sát, Đàm Phán</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>