project/force-app/main/default/objects/Opportunity/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <label>Lease Term (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>