project/force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High rental price</fullName>
            </value>
            <value>
                <fullName>Incompatible industry</fullName>
            </value>
            <value>
                <fullName>Customer changed mind</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Giá thuê cao</fullName>
                <isActive>false</isActive>
                <label>Giá thuê cao</label>
            </value>
            <value>
                <fullName>Khách đổi ý</fullName>
                <isActive>false</isActive>
                <label>Khách đổi ý</label>
            </value>
            <value>
                <fullName>Không phù hợp ngành hàng</fullName>
                <isActive>false</isActive>
                <label>Không phù hợp ngành hàng</label>
            </value>
            <value>
                <fullName>Thua đối thủ</fullName>
                <isActive>false</isActive>
                <label>Thua đối thủ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>