project/force-app/main/default/objects/Opportunity/fields/Min_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Range__c</fullName>
    <description>- Bắt buộc nhập nếu Opp. Type = Chia Sẻ Doanh Thu Có Chặn Dưới
- Dynamic layout tương ứng trường bắt buộc nhập</description>
    <label>Min Range</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>