project/force-app/main/default/objects/Opportunity/fields/Negotiation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_End_Date__c</fullName>
    <label>Negotiation End Date</label>
    <type>Date</type>
</CustomField>