project/force-app/main/default/objects/Opportunity/fields/Negotiation_History__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_History__c</fullName>
    <label>Negotiation History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>