project/force-app/main/default/objects/Opportunity/fields/Negotiation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Start_Date__c</fullName>
    <label>Negotiation Start Date</label>
    <type>Date</type>
</CustomField>