project/force-app/main/default/objects/Opportunity/fields/Negotiation_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Transition_Date__c</fullName>
    <label>Negotiation Transition Date</label>
    <description>Không hiện lên layout</description>
    <type>Date</type>
</CustomField>