project/force-app/main/default/objects/Opportunity/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Location</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>New_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>