project/force-app/main/default/objects/Opportunity/fields/New_Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Rent_Date__c</fullName>
    <label>New Rent Date</label>
    <type>Date</type>
</CustomField>