project/force-app/main/default/objects/Opportunity/fields/Not_Determined_Rent_Price_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Determined_Rent_Price_End_Date__c</fullName>
    <label>Not Determined Rent Price End Date</label>
    <type>Date</type>
</CustomField>