project/force-app/main/default/objects/Opportunity/fields/Number_Of_Actual_Voucher_Support_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Actual_Voucher_Support_Months__c</fullName>
    <description>Help Text: Tháng</description>
    <label>Number Of Actual Voucher Support Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>