project/force-app/main/default/objects/Opportunity/fields/Number_Of_Copies_Kept_By_VCR__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Copies_Kept_By_VCR__c</fullName>
    <label>Number Of Copies Kept By VCR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>