project/force-app/main/default/objects/Opportunity/fields/Number_Of_Positions_Provided_In_Building__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Positions_Provided_In_Building__c</fullName>
    <label>Number Of Positions Provided In Building</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>