project/force-app/main/default/objects/Opportunity/fields/Number_Of_Version__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Version__c</fullName>
    <label>Number Of Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>