project/force-app/main/default/objects/Opportunity/fields/Opening_Date_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date_By_Sales__c</fullName>
    <label>Opening Date (By Sales)</label>
    <description>Bắt buộc nhập sau khi có báo cáo chốt</description>
    <type>Date</type>
</CustomField>