project/force-app/main/default/objects/Opportunity/fields/Opening_Date_By_SAP__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date_By_SAP__c</fullName>
    <label>Opening Date (By SAP)</label>
    <type>Date</type>
</CustomField>