project/force-app/main/default/objects/Opportunity/fields/Order_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Contract_Date__c</fullName>
    <label>Order Contract Date</label>
    <description>Bắt buộc nhập khi chuyển sang giai đoạn Hợp Đồng</description>
    <type>Date</type>
</CustomField>