project/force-app/main/default/objects/Opportunity/fields/OTL_Link__c.field-meta.xml
<CustomField>
    <fullName>OTL_Link__c</fullName>
    <label>OTL Link</label>
    <description>Bắt buộc nhập khi chuyển sang trạng thái Cọc</description>
    <type>Url</type>
</CustomField>