project/force-app/main/default/objects/Opportunity/fields/OTL_Number__c.field-meta.xml
<CustomField>
    <fullName>OTL_Number__c</fullName>
    <label>OTL Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>