project/force-app/main/default/objects/Opportunity/fields/OTL_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>OTL_Signed_Date__c</fullName>
    <label>OTL Signed Date</label>
    <type>Date</type>
</CustomField>