project/force-app/main/default/objects/Opportunity/fields/Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price__c</fullName>
    <label>Outdoor Price</label>
    <description>Nhập và chỉnh sửa bằng USD
Help Text: USD/m2/Tháng</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>