project/force-app/main/default/objects/Opportunity/fields/Outdoor_Price_Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_Support_End_Date__c</fullName>
    <label>Outdoor Price Support End Date</label>
    <type>Date</type>
</CustomField>