project/force-app/main/default/objects/Opportunity/fields/Outdoor_Price_Support_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_Support_From_Date__c</fullName>
    <label>Outdoor Price Support From Date</label>
    <type>Date</type>
</CustomField>